--- a/upload.html
+++ b/upload.html
@@ -17,11 +17,11 @@
      <H2>Template Uploader</H2>
      <form id="form" action="/upload" method="post">
         <label>First Name</label><br>
-        <input type="text" id="firstName" name="firstName"><br>
+        <input type="text" id="firstName" name="firstName" value=""><br>
         <label>Last Name</label><br>
-        <input type="text" id="lastName" name="lastName"><br>
+        <input type="text" id="lastName" name="lastName" value=""><br>
         <label>File Name</label><br>
-        <input type="text" id="fileName" name="fileName"><br>
+        <input type="text" id="fileName" name="fileName" value=""><br>
        <input type="submit" id="formButton" style="display:none">       
         </form>
         <button id="selectButton">Select Files</button>
@@ -35,9 +35,6 @@
     console.log("script");
     </script>    
     </center>     
-    <script src="/dist/azure.js" type="text/javascript"></script> 
+    <script src="/src/azure.js" type="text/javascript"></script> 
 </body>
 </html>
-
-
-
